# snowdrift

./: .gitignore  CMakeLists.txt  run.sh  todays.todo
cmake/: client.cmake  dirs.cmake
cmake/libraries/: all.cmake  sdl.cmake
common/: common.c
src/client/: cl_main.c
src/common/: common.c  common.h
src/sys/: sys_local.h  sys_main.c
sys/: sys_main.c
